--- a/week4/test_citibike_predictions.Rmd
+++ b/week4/test_citibike_predictions.Rmd
@@ -61,6 +61,10 @@ view(trips_per_day)
 
 
 trips_per_day <- trips_per_day |> select(ymd, num_trips, prcp, snow, snwd, tmax, tmin, day_name, is_weekend, avg_temp, avg_prcp, month, season)
+
+trips_per_day <- trips_per_day |> mutate(
+    tmax = tmax /10
+)
 view(trips_per_day)
 ```
 
@@ -79,5 +83,5 @@ test_err <- c()
 test_err <- sqrt(mean((predict(model, trips_per_day) - trips_per_day$num_trips)^2))
 test_err
 
-#test_err RMSE 214126.6
+#test_err RMSE 7785.088
 ```
